@@ -1,3 +1,6 @@
+2004-08-06 Randy McMurchy <randy@linuxfromscratch.org>
+	* Added openldap (slapd and slurpd startup) scripts
+
 2004-08-05 Randy McMurchy <randy@linuxfromscratch.org>
 	* Added cyrus-sasl (Cyrus SASL authdaemon) script 
 
